# models/accounts/index.js
@@ -1,5 +1,7 @@
 const deposit = require('./deposit');
+const transfer = require('./transfer');
 
 module.exports = {
   deposit,
+  transfer,
 }
